# job-scraper

./: .gitignore  pyproject.toml
assignment_scraper/: main.py  models.py  scrapers.py
job_scraper/: main.py  models.py  new_job_detector.py  scrapers.py  slack_poster.py  summarizer.py
job_scraper/scrapers/: base.py  emagine.py  folq.py  mercell.py  scrapers.py  verama.py  witted.py
